kubernetes-react-spring-boot-postgres/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: todo
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tarkin25/todo-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: todo
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
