kubernetes-react-spring-boot-postgres/kubernetes/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: todo
spec:
  selector:
    matchLabels:
      app:  database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:11-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: todo
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
